--- a/src/app.css
+++ b/src/app.css
@@ -7,14 +7,14 @@
     height: 40px;
     width: 40px;
     border-radius: 100%;
+    border-color: black;
     position: fixed;
-    bottom: 30px;
-    right: 25px;
+    bottom: 15px;
+    right: 4px;
     cursor: pointer;
 }
 
 body {
-    height:max-content;
     background-image: url(./components/layout/assets/bckg.jpg);
     background-attachment:fixed;
     background-size: 6000px;
